--- a/package.json
+++ b/package.json
@@ -51,25 +51,47 @@
     "@google-cloud/text-to-speech": "^5.1.0",
     "@tensorflow-models/posenet": "^2.2.2",
     "@tensorflow/tfjs": "^4.10.0",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
     "cannon-es": "^0.20.0",
     "concurrently": "^9.2.1",
     "dat.gui": "^0.7.9",
+    "draco3dgltf": "^1.5.6",
     "elevenlabs-api": "^1.0.0",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
+    "file-saver": "^2.0.5",
+    "gltf-pipeline": "^4.0.0",
+    "helmet": "^7.1.0",
+    "howler": "^2.2.4",
+    "ioredis": "^5.3.2",
+    "jimp": "^0.22.10",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
+    "multer": "^2.0.1",
+    "node-fetch": "^3.3.2",
     "node-gtts": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
-    "three": "^0.158.0"
+    "redis": "^4.6.10",
+    "socket.io": "^4.7.4",
+    "three": "^0.158.0",
+    "tone": "^14.7.77",
+    "webxr-polyfill": "^2.0.1",
+    "ws": "^8.14.2",
+    "google-tts-api": "^2.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
     "concurrently": "^8.2.2",
     "cors": "^2.8.6",
-    "eslint": "^8.55.0",
+    "eslint": "^4.1.1",
     "express": "^4.18.2",
-    "vite": "^5.0.0"
+    "jest": "^25.0.0",
+    "nodemon": "^1.0.2",
+    "supertest": "^7.1.3",
+    "vite": "^7.3.1"
   },
   "engines": {
     "node": ">=16.0.0"
